<resources>
    <string name="app_name">ATMODRIVE PASSENGER</string>
    <string name="intro">Looking for\na ride? Try\n<font color='#00A6A6'>AtmoDrive</font>  and\nBook now!</string>
    <string name="get_started">Get Started</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="find_account">Enter mobile number to find your account or create a new one.</string>
    <string name="agree_policy">By continue you agree to AtmoDrive’s <font color='#00A6A6'><u>Terms &amp; Conditions</u></font> and <font color='#00A6A6'><u>Privacy Policy</u></font></string>
    <string name="verify_otp">Enter the OTP code sent at mobile number <font color='#00A6A6'>+20 114 933 6618</font> to verify its you.</string>
    <string name="don_t_receive_a_code">Don’t receive a code? </string>
    <string name="resend"><u>Resend</u></string>
    <string name="create_your_account">Enter your information below to create your account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="cash_price">105 EGP</string>
    <string name="atmodrive_setting">AtmoDrive - Android \nv1.0.0(1)</string>
</resources>